<resources>
    <string name="app_name">HoopTracker</string>
    <string name="nombre_del_torneo">Nombre del torneo</string>
    <string name="posicion">Posición</string>
    <string name="jugador">Jugador</string>
    <string name="nombre_del_jugador">Nombre del jugador</string>
    <string name="dorsal">Dorsal</string>
    <string name="totales">Totales:</string>
    <string name="guardar">Guardar</string>
    <string name="sin_estad_sticas_todav_a">Sin estadísticas todavía</string>
    <string name="eliminar_jugador">Eliminar jugador</string>
    <string name="cambiar_tema">Cambiar tema</string>
    <string name="ver_partidos">Ver Partidos</string>
    <string name="ver_equipos">Ver Equipos</string>
    <string name="ver_jugadores">Ver Jugadores</string>
    <string name="ver_torneos">Ver Torneos</string>
    <string name="cambiar_de_usuario">Cambiar de usuario</string>
    <string name="fecha_inicio">Fecha inicio</string>
    <string name="nombre_equipo">Nombre equipo</string>
    <string name="icono_equipo">Icono equipo</string>
    <string name="pts_0_reb_0_ast_0_rob_0_per_0">PTS 0 REB 0 AST 0 ROB 0 PER 0</string>
    <string name="pts_0">PTS: 0</string>
    <string name="reb_0">REB: 0</string>
    <string name="ast_0">AST: 0</string>
    <string name="rob_0">ROB: 0</string>
    <string name="per_0">PER: 0</string>
    <string name="fal_0">FAL: 0</string>
    <string name="_1">+1</string>
    <string name="_2">+2</string>
    <string name="_3">+3</string>
    <string name="reb">REB</string>
    <string name="rob">ROB</string>
    <string name="per">PER</string>
    <string name="falta">FALTA</string>
    <string name="_00_posici_n">#00 • Posición</string>
    <string name="nombre_jugador">Nombre jugador</string>
    <string name="desple">▼</string>
    <string name="equipo_x">Equipo X</string>
    <string name="pendiente_en_juego_finalizado">Pendiente / En juego / Finalizado</string>
    <string name="_10_02_2025">10/02/2025</string>
    <string name="team_a_vs_team_b">Team A vs Team B</string>
    <string name="a_adir_torneo">Añadir torneo</string>
    <string name="torneos">Torneos</string>
    <string name="a_adir_partido_al_torneo">Añadir partido al torneo</string>
    <string name="guardar_cambios">GUARDAR CAMBIOS</string>
    <string name="este_torneo_todav_a_no_tiene_partidos">Este torneo todavía no tiene partidos</string>
    <string name="partidos_del_torneo">Partidos del torneo</string>
    <string name="descripci_n_del_torneo">Descripción del torneo</string>
    <string name="fecha_fin_opcional">Fecha fin (opcional)</string>
    <string name="fecha_inicio_dd_mm_yyyy">Fecha inicio (dd/MM/yyyy)</string>
    <string name="nombre_del_torneo1">Nombre del torneo</string>
    <string name="crear_torneo">Crear torneo</string>
    <string name="fecha_de_fin_opcional">Fecha de fin (opcional)</string>
    <string name="fecha_de_inicio">Fecha de inicio</string>
    <string name="descripci_n_opcional">Descripción (opcional)</string>
    <string name="nombre_del_torneo2">Nombre del torneo</string>
    <string name="a_adir_equipo">Añadir equipo</string>
    <string name="a_n_no_hay_equipos_creados">Aún no hay equipos creados</string>
    <string name="equipos">Equipos</string>
    <string name="eliminar_equipo">Eliminar equipo</string>
    <string name="guardar_equipo">Guardar equipo</string>
    <string name="nombre_del_equipo">Nombre del equipo</string>
    <string name="equipo">Equipo</string>
    <string name="top_anotadores">Top anotadores</string>
    <string name="estad_sticas_globales">Estadísticas globales</string>
    <string name="ya_tengo_cuenta">Ya tengo cuenta</string>
    <string name="registrarse">Registrarse</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="a_adir_jugador">Añadir jugador</string>
    <string name="no_hay_jugadores_todav_a">No hay jugadores todavía</string>
    <string name="jugadores">Jugadores</string>
    <string name="exportar_historial">Exportar historial</string>
    <string name="puntos_por_partido">Puntos por partido</string>
    <string name="totales_acumulados">Totales acumulados:</string>
    <string name="media_de_puntos_0_0">Media de puntos: 0.0</string>
    <string name="jugador1">Jugador</string>
    <string name="historial_del_jugador">Historial del jugador</string>
    <string name="exportar_xml">Exportar XML</string>
    <string name="exportar_csv">Exportar CSV</string>
    <string name="puntos_rebotes_asistencias_por_jugador">Puntos / Rebotes / Asistencias por jugador</string>
    <string name="puntos_por_jugador">Puntos por jugador</string>
    <string name="filtros">Filtros</string>
    <string name="jugadores_equipo_visitante">Jugadores equipo visitante</string>
    <string name="jugadores_equipo_local">Jugadores equipo local</string>
    <string name="mejores_asistentes">Mejores asistentes</string>
    <string name="mejores_reboteadores">Mejores reboteadores</string>
    <string name="mejores_anotadores">Mejores anotadores</string>
    <string name="totales_equipo_visitante">Totales equipo visitante</string>
    <string name="totales_equipo_local">Totales equipo local</string>
    <string name="marcador_final">Marcador final</string>
    <string name="resumen_del_partido">Resumen del partido</string>
    <string name="equipo_visitante">Equipo visitante</string>
    <string name="equipo_local">Equipo local</string>
    <string name="finalizar_partido">Finalizar partido</string>
    <string name="siguiente_periodo">Siguiente periodo</string>
    <string name="_1_cuarto">1º cuarto</string>
    <string name="visitante">Visitante</string>
    <string name="_0">0</string>
    <string name="linea">-</string>
    <string name="_01">0</string>
    <string name="local">Local</string>
    <string name="todav_a_no_hay_partidos_creados">Todavía no hay partidos creados</string>
    <string name="ver_estad_sticas_globales">VER ESTADÍSTICAS GLOBALES</string>
    <string name="gestionar_equipos">GESTIONAR EQUIPOS</string>
    <string name="crear_partido">CREAR PARTIDO</string>
    <string name="modo_invitado">Modo invitado</string>
    <string name="crear_partido1">Crear partido</string>
    <string name="nombre_del_torneo_opcional">Nombre del torneo (opcional)</string>
    <string name="selecciona_una_fecha">Selecciona una fecha</string>
    <string name="selecciona_equipo">Selecciona equipo</string>
    <string name="equipo_visitante1">Equipo visitante</string>
    <string name="selecciona_equipo1">Selecciona equipo</string>
    <string name="equipo_local1">Equipo local</string>
    <string name="nuevo_partido">Nuevo partido</string>
    <string name="crear_cuenta_nueva">Crear cuenta nueva</string>
    <string name="entrar_como_invitado">Entrar como invitado</string>
    <string name="entrar">Entrar</string>
    <string name="contrase_a1">Contraseña</string>
    <string name="email1">Email</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
</resources>