<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="8dp"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="4dp"
    app:cardCornerRadius="14dp"
    app:cardBackgroundColor="?attr/colorSurface"
    app:rippleColor="?attr/colorPrimaryVariant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtTeams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_a_vs_team_b"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_10_02_2025"
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pendiente_en_juego_finalizado"
            android:layout_marginTop="6dp"
            android:textSize="14sp"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
